Various memory leak fixes

https://bugzilla.gnome.org/show_bug.cgi?id=620430
With help from Pablo Castellano